llvm-gcc-4.2-2.9/gcc/testsuite/gcc.apple/asm-function-14.c
/* APPLE LOCAL file CW asm blocks */
/* { dg-do assemble { target powerpc*-*-* } } */
/* { dg-options "-fasm-blocks" } */

asm void foo()
{
  li     r1, kUndefindedConstant	/* { dg-error "kUndefindedConstant.* used but not defined" } */
}
